# hotel-booking-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  README.md  docker-commands.ps1  docker-compose.test.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  test_api.ps1  test_api.py
bookings/: models.py  urls.py  views.py
bookings/migrations/: 0001_initial.py
bookings/tests/: __init__.py  test_api.py  test_basic.py  test_models.py  test_views.py
hotel_api/: asgi.py  settings.py  wsgi.py
